# hdzero-programmer

./: .gitignore  HDZero_programmer_2.py  README.md  frame_event_vrx.py  hdzero_programmer.py  icon_convert.py  parse_file.py  pyproject.toml  setup.py
app/: main.py
app/core/: CoreInterface.py  custom_logger.py  utils.py
resource/: __init__.py  resources.py  resources.qrc
resource/QrcFiles/: image_resources.py  image_resources.qrc
src/: resources.py  resources.qrc
src/styles/: styles.qss
ui/: main_window.ui
